--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.1.6",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "passport": "^0.6.0",
@@ -35,7 +38,9 @@
     "@nx/webpack": "16.6.0",
     "@nx/workspace": "16.6.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
